--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
+      content="Web site created using create-react-app"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
     <title>Luxchono Admin</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@300;400&family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
